tests/baselines/reference/FunctionDeclaration8_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts(1,11): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration8_es6.ts (1 errors) ====
    var v = { [yield]: foo }
              ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.